
@startuml
skinparam classAttributeIconSize 0
title Hospital Management System UML

' ================== Classes ==================
class Hospital {
  - name : String
  - departments : HospitalDepartment[]
  - numOfDepartments : int
}

class HospitalDepartment {
  - name : String
  - roomCount : int
  - doctors : Doctor[]
  - numOfDoctors : int
  - patients : Patient[]
  - numOfPatients : int
}

class Doctor {
  - firstName : String
  - lastName : String
  - licenseNumber : String
  - yearsOfExperience : int
}

class Patient {
  - name : String
  - idNumber : String
  - treatments : Treatment[]
}

class Treatment {
  - description : String
  - date : LocalDate
  - performedBy : Doctor
}

enum HospitalActionStatus {
  SUCCESS
  DOCTOR_EXIST
  PATIENT_EXIST
  TREATMENT_EXIST
  ERROR
}

class Utils <<static>> {
  + resizeArr(Object[]) : Object[]
  + isExist(Object[], int, Object) : boolean
}

' ================== Relationships ==================
Hospital "1" *-- "many" HospitalDepartment : departments
HospitalDepartment "1" o-- "many" Doctor : doctors
HospitalDepartment "1" *-- "many" Patient : patients
Patient "1" *-- "many" Treatment : treatments
Treatment --> Doctor : performedBy

@enduml
